# hsmusicifier

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.cargo/: config
.direnv/: cache-unknown  drv
.github/workflows/: ci.yml
src/: bandcamp.rs  hsmusic.rs  id3.rs  lib.rs  locate.rs  main.rs  parse.rs
