[package]
name = "hsmusicifier"
version = "0.4.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
attohttpc = "0.16.1"
either = "1.6.1"
htmlescape = "0.3.1"
iui = { git = "https://github.com/rust-native-ui/libui-rs.git" }
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }
once_cell = "1.5.2"
regex = "1.4.3"
scraper = "0.12.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
url = "2.2.0"
walkdir = "2.3.1"
ffmpeg-next = "4.3.8"
rayon = "1.5.0"
